algo mas agregado

--- a/.hintrc
+++ b/.hintrc
@@ -6,6 +6,7 @@
     "no-inline-styles": "off",
     "button-type": "off",
     "axe/name-role-value": "off",
-    "compat-api/css": "off"
+    "compat-api/css": "off",
+    "axe/forms": "off"
   }
 }
