--- a/.hintrc
+++ b/.hintrc
@@ -7,6 +7,8 @@
     "button-type": "off",
     "axe/name-role-value": "off",
     "compat-api/css": "off",
-    "axe/forms": "off"
+    "axe/forms": "off",
+    "typescript-config/consistent-casing": "off",
+    "typescript-config/strict": "off"
   }
 }
