--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@eslint/js": "^9.32.0",
     "@supabase/supabase-js": "^2.78.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/next": "^8.0.7",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
